adding neo4j to project w/ custom typings

--- a/Source/backend/tsconfig.json
+++ b/Source/backend/tsconfig.json
@@ -3,7 +3,13 @@
         "target": "es6",
         "module": "commonjs",
         "sourceMap": true,
-        "outDir": "dist"
+        "outDir": "dist",
+        "baseUrl": ".",
+        "paths": {
+            "*": [
+                "./typings/*"
+            ]
+        }
     },
     "include": [
         "./**/*.ts"
