--- a/Source/backend/.vscode/settings.json
+++ b/Source/backend/.vscode/settings.json
@@ -10,6 +10,7 @@
         "**/bin": true,
         "**/obj": true,
         "**/dist": true,
-        "**/.vs": true
+        "**/.vs": true,
+        "**/*.njsproj" : true
     }
 }
