--- a/Source/backend/package.json
+++ b/Source/backend/package.json
@@ -6,11 +6,15 @@
     "start": "node ./server.js"
   },
   "dependencies": {
+    "@types/bcrypt": "^1.0.0",
+    "@types/jsonwebtoken": "^7.2.1",
+    "bcrypt": "^1.0.2",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "^2.5.6",
     "express": "~4.15.2",
+    "jsonwebtoken": "^7.4.1",
     "morgan": "^1.8.2",
     "neo4j-driver": "^1.3.0",
     "serve-favicon": "~2.4.2"
