--- a/Source/backend/package.json
+++ b/Source/backend/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^7.4.1",
     "morgan": "^1.8.2",
     "neo4j-driver": "^1.3.0",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "ts-express-decorators": "^1.4.8"
   },
   "devDependencies": {
     "@types/debug": "0.0.29",
