--- a/Source/backend/tsconfig.json
+++ b/Source/backend/tsconfig.json
@@ -4,6 +4,8 @@
         "module": "commonjs",
         "sourceMap": true,
         "outDir": "dist",
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "baseUrl": ".",
         "paths": {
             "*": [
