angular login implemented

--- a/Source/.vscode/settings.json
+++ b/Source/.vscode/settings.json
@@ -13,6 +13,7 @@
         "**/bin": true,
         "**/obj": true,
         "**/*.sln": true,
-        "**/*.njsproj": true
+        "**/*.njsproj": true,
+        "**/dist" : true
     }
 }
