--- a/Source/backend/package.json
+++ b/Source/backend/package.json
@@ -16,14 +16,16 @@
     "express": "~4.15.2",
     "jsonwebtoken": "^7.4.1",
     "morgan": "^1.8.2",
+    "multer": "^1.3.0",
     "neo4j-driver": "^1.3.0",
     "serve-favicon": "~2.4.2",
     "ts-express-decorators": "^1.4.8"
   },
   "devDependencies": {
     "@types/debug": "0.0.29",
-    "@types/node": "^7.0.29",
     "@types/express": "^4.0.35",
-    "@types/morgan": "^1.7.32"
+    "@types/morgan": "^1.7.32",
+    "@types/multer": "^1.3.2",
+    "@types/node": "^7.0.29"
   }
 }
