--- a/Source/frontend/package.json
+++ b/Source/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@types/googlemaps": "^3.26.13",
+    "angular2-jwt": "^0.2.3",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "rxjs": "^5.1.0",
